--- a/ops/daemons/uwsgi.yaml
+++ b/ops/daemons/uwsgi.yaml
@@ -1,5 +1,5 @@
 prod:
-    plugins: python,logfile,gevent_python
+    plugins: python3,logfile
     chdir: /home/iris/source/src
     socket: /home/iris/var/run/uwsgi.sock
     chmod-socket: 666
