--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ jobs:
     services:
       - docker
     docker:
-      - image: circleci/python:3.7-stretch-browsers
-      - image: mysql/mysql-server:5.7.33
+      - image: cimg/python:3.10.8-browsers
+      - image: mysql/mysql-server:8.0
         environment:
           - MYSQL_ALLOW_EMPTY_PASSWORD=1
           - MYSQL_ROOT_HOST=%
@@ -16,7 +16,7 @@ jobs:
           name: Install dependencies
           command: |
             sudo apt-get update
-            sudo apt-get install libsasl2-dev python-dev libldap2-dev libssl-dev mysql-server
+            sudo apt-get install libsasl2-dev python3-dev libldap2-dev libssl-dev mysql-client
       - run:
           name: Prepare virtualenv
           command: |
