--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 [flake8]
 exclude = .tox,./build
 filename = *.py
-ignore = E501,E101,E741
+ignore = E501,E101,E741,E402,W504,F841
 
 [testenv]
 deps =
